# tady

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  show_errors.py
case/: coexist.txt  dangling.txt  exclusive.txt
cpp/: CMakeLists.txt
cpp/include/: disasm.h  graph.h  graph_boost.hpp  llvm_disasm.hpp  mc_disasm.hpp  table.h  x86DisassemblerDecoder.hpp  x86FlowKind.hpp
cpp/src/: disasm.cc  graph.cc  llvm_disasm.cc  mc_disasm.cc  tady.cc
data/obf/: README.md  eval.py  labels.txt  manual_labels_to_gt.py
docker/: Dockerfile
python/tady/: __init__.py  infer.py  prune.py
python/tady/graph/: __init__.py  __main__.py
python/tady/model/: attention.py  disasm_jax.py  disasm_table.py  tady_flax.py  tagnn_flax.py  wcc_jax.py
python/tady/utils/: loader.py
scripts/: average.py  export.py  generate_model_conf.py  preprocess.py  prune.py  stat.py  test.py  train.py
scripts/ablation/: complexity.py  generate_uniform_plots.py  model_efficiency.py  prune_efficiency.py  sample_select.py
scripts/baselines/DeepDi/: DeepDiLief.py  Dockerfile  README.md
scripts/baselines/XDA/: batch_eval_lief.py
scripts/baselines/ddisasm/: Dockerfile  batch_run.py  batch_run_lief.py
scripts/baselines/ghidra/: README.md  batch_run.py  disassemble.py  pyghidra_disassemble.py
scripts/baselines/ida/: batch_run.py  disassemble.py  idalib_disassemble.py
scripts/conf/: average.yaml  export.yaml  prune.yaml  stat.yaml  test.yaml  train.yaml
scripts/conf/connections/: all.yaml  overlapping.yaml
scripts/conf/model/: default.yaml
scripts/dataset/: gather_binaries.py  lief_gt.py  strip.py
scripts/dataset/assemblage/: pdb-markers  pdb_gt.py
scripts/dataset/bap/: linear_gt.py
scripts/dataset/gtirb/: gtirb_gt.py
scripts/dataset/obf-benchmark/: obf_gt.py
scripts/dataset/pangine/: sqlite_gt.py
scripts/dataset/quarks/: quokka_gt.py
scripts/dataset/sok/: compile.py  parse_sok.py  parse_sok_pb.py
scripts/dataset/sok/conf/: compile.yaml
scripts/dataset/sok/conf/compiler/: clang32.yaml  clang64.yaml  gcc32.yaml  gcc64.yaml
scripts/dataset/sok/conf/opt/: O0.yaml  O1.yaml  O2.yaml  O3.yaml  Of.yaml  Os.yaml  Oz.yaml
scripts/dataset/sok/conf/project/: ImageMagick.yaml  curl.yaml  diffutils.yaml  gmp.yaml  libmicrohttpd.yaml  libtomcrypt.yaml  openssl.yaml  putty.yaml  sqlite.yaml  zlib.yaml
scripts/dataset/sok/proto/: blocks.proto  blocks_pb2.py  refInf.proto  refInf_pb2.py
scripts/experiments/: average.py  batch_run.py  bench.py  collect_stat.py  diff.py  error_stat.py  eval.py  export.py  preprocess.py  prune.py  stat.py  test.py  train.py  train_tokenizer.py
scripts/experiments/conf/: average.yaml  collect_stat.yaml  error_stat.yaml  eval.yaml  export.yaml  prune.yaml  stat.yaml  test.yaml  tokenizer.yaml  train.yaml
scripts/experiments/conf/connections/: all.yaml  edges.yaml  none.yaml
scripts/experiments/conf/dataset/: assemblage.yaml  bap.yaml  llvm-test-suite-gtirb.yaml  mix.yaml  mix_all.yaml  mix_obf.yaml  mix_sok.yaml  obf-benchmark-obf.yaml  obf-benchmark.yaml  pangine.yaml  pangine_ablation.yaml  quarks.yaml  rw.yaml  x86_dataset.yaml
scripts/experiments/conf/model/: default.yaml  xda.yaml
scripts/obfuscation/: stats.py
